--- a/Tribute page.html
+++ b/Tribute page.html
@@ -8,6 +8,8 @@ header{
     font-size: 40px;
     text-align:center; 
     font-weight: 500; 
+    position: static;
+    left: 200px;  
 }
 
 h1 {
@@ -22,6 +24,12 @@ font-weight: 300;
 
 }
 
+#subtitle{
+font-size: 18px;
+font-weight: 500; 
+text-align: center;  
+}
+
 </style>
 
 <HTML>
@@ -31,13 +39,22 @@ font-weight: 300;
 <header>Dr.Norman Borlaug</header>
 <body>
     <h1> The man who saved a billion lives</h1>
-    <img src=""> 
+    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
 <br>
 <br>
     <h2>Dr. Norman borlaug, third from the left
         , trains biologists in Mexico on how to increase wheat
         yields - part of his life-long war on hunger.
-    </h2> 
+    </h2>
+   <br>
+   <br>
+   <br>
+    <div id="subtitle">
+        Here's a timeline of Dr. Borlaug's life
+    </div> 
+    <div id="timeline">
+        
+    </div>
 </body>
 </HTML>
 
