--- a/Tribute page.html
+++ b/Tribute page.html
@@ -40,6 +40,13 @@ text-align: center;
 table-layout:fixed;
 font-weight: 300; 
 }
+.italics{
+    text-align: center; 
+    font-weight: 350; 
+}
+footer {
+    font-weight: 550 
+}
 </style>
 
 <HTML>
@@ -83,5 +90,21 @@ font-weight: 300;
         </ul>
     </div>
 </body>
+<br>
+<br>
+<body class="italics">
+<em>"Boralug's life and achievement are testimony to the far-reaching contribution that one
+man's towering intellect, persistence and scientific vision can make to humman peace and progress".</em>
+<br>
+<br>
+<div class="italics">
+   <em> --Indian Prime Minister Manmohan Singh </em>
+</div>
+</body>
+<br>
+<br>
+<footer>If you have time, you should read more about this incredible 
+    human being on his Wikipedia entry.
+</footer>
 </HTML>
 
