--- a/Tribute page.html
+++ b/Tribute page.html
@@ -56,7 +56,7 @@ footer {
 <header>Dr.Norman Borlaug</header>
 <body>
     <h1> The man who saved a billion lives</h1>
-    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
+    <img class="picture" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
 <br>
 <br>
     <h2>Dr. Norman borlaug, third from the left
@@ -106,7 +106,7 @@ man's towering intellect, persistence and scientific vision can make to humman p
 </body>
 <br>
 <br>
-<footer>If you have time, you should read more about this incredible 
+<footer> If you have time, you should read more about this incredible 
     human being on his Wikipedia entry.
 </footer>
 </HTML>
