Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -72,6 +72,10 @@ footer {
         Here's a timeline of Dr. Borlaug's life
     </div> 
     <div id="timeline">
+        <br>
+        <br>
+        <br>
+        <br>
         <ul>
             <li><strong>1914</strong> - Born in Creso, Iowa</li>
             <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li> 
@@ -107,7 +111,7 @@ man's towering intellect, persistence and scientific vision can make to humman p
 <br>
 <br>
 <footer> If you have time, you should read more about this incredible 
-    human being on his Wikipedia entry.
+    human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>
 </footer>
 </HTML>
 
