--- a/Tribute page.html
+++ b/Tribute page.html
@@ -4,7 +4,7 @@
     background-color:rgba(245, 245, 245, 0.966)
 }
 
-header{
+#title {
     font-size: 40px;
     text-align:center; 
     font-weight: 500; 
@@ -30,7 +30,7 @@ font-weight: 500;
 text-align: center;  
 }
 
-#timeline{
+#main{
     font-size: 15px;
     text-align: center; 
 }
@@ -53,7 +53,7 @@ footer {
 <head>
     <Title> Tribute page of Dr.Norman Borlaug</Title>
 </head>
-<header>Dr.Norman Borlaug</header>
+<header id="title">Dr.Norman Borlaug</header>
 <body>
     <h1> The man who saved a billion lives</h1>
     <img class="picture" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
@@ -71,7 +71,7 @@ footer {
     <div id="subtitle">
         Here's a timeline of Dr. Borlaug's life
     </div> 
-    <div id="timeline">
+    <div id="main">
         <br>
         <br>
         <br>
