Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -71,7 +71,7 @@ footer {
     <div id="subtitle">
         Here's a timeline of Dr. Borlaug's life
     </div> 
-    <div id="main">
+    <main id="main">
         <br>
         <br>
         <br>
@@ -94,7 +94,7 @@ footer {
             <li><strong>2005</strong> - States "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modyifying plants and animals for a long time. Long before we caled it science, people were selecting the best breeds."</li>
             <li><strong>2009</strong> - Dies at the age of 95</li> 
         </ul>
-    </div>
+    </main>
 </body>
 <br>
 <br>
