Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -56,8 +56,8 @@ footer {
 <header id="title">Dr.Norman Borlaug</header>
 <body>
     <h1> The man who saved a billion lives</h1>
-    <img class="picture" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
-<br>
+    <img class="picture" id="img-div" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
+    <br>
 <br>
     <h2>Dr. Norman borlaug, third from the left
         , trains biologists in Mexico on how to increase wheat
