--- a/Tribute page.html
+++ b/Tribute page.html
@@ -24,13 +24,13 @@ font-weight: 300;
 
 }
 
-#subtitle{
+#subtitle {
 font-size: 18px;
 font-weight: 500; 
 text-align: center;  
 }
 
-#main{
+#main {
     font-size: 15px;
     text-align: center; 
 }
@@ -40,13 +40,15 @@ text-align: center;
 table-layout:fixed;
 font-weight: 300; 
 }
-.italics{
+.italics {
     text-align: center; 
     font-weight: 350; 
 }
 footer {
     font-weight: 550 
 }
+
+
 </style>
 
 <HTML>
@@ -54,12 +56,13 @@ footer {
     <Title> Tribute page of Dr.Norman Borlaug</Title>
 </head>
 <header id="title">Dr.Norman Borlaug</header>
+<main id="main">
 <body>
     <h1> The man who saved a billion lives</h1>
-    <img class="picture" id="img-div" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
-    <br>
+    <img id="image" id="image-div" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
 <br>
-    <h2>Dr. Norman borlaug, third from the left
+<br>
+    <h2 id="img-caption">Dr. Norman borlaug, third from the left
         , trains biologists in Mexico on how to increase wheat
         yields - part of his life-long war on hunger.
     </h2>
@@ -71,12 +74,11 @@ footer {
     <div id="subtitle">
         Here's a timeline of Dr. Borlaug's life
     </div> 
-    <main id="main">
         <br>
         <br>
         <br>
         <br>
-        <ul>
+        <ul id="tribute-info">
             <li><strong>1914</strong> - Born in Creso, Iowa</li>
             <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li> 
             <li> <strong>1935</strong> - Has to stop school and save up more money. Works in the civilian conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me</li>
@@ -111,7 +113,7 @@ man's towering intellect, persistence and scientific vision can make to humman p
 <br>
 <br>
 <footer> If you have time, you should read more about this incredible 
-    human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>
+    human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>
 </footer>
 </HTML>
 
