Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -48,6 +48,15 @@ footer {
     font-weight: 550 
 }
 
+#image {
+    height: auto;
+    max-width: 100%; 
+    display: block;
+}
+#image-caption{
+    height:auto; 
+}
+
 
 </style>
 
@@ -60,8 +69,9 @@ footer {
 <body>
     <h1> The man who saved a billion lives</h1>
     <img id="image" id="image-div" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
-<br>
-<br>
+    <br>
+    <br>
+    
     <h2 id="img-caption">Dr. Norman borlaug, third from the left
         , trains biologists in Mexico on how to increase wheat
         yields - part of his life-long war on hunger.
@@ -113,7 +123,7 @@ man's towering intellect, persistence and scientific vision can make to humman p
 <br>
 <br>
 <footer> If you have time, you should read more about this incredible 
-    human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>
+    human being on his <a id="tribute-link" target="_blank" href= "https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>
 </footer>
 </HTML>
 
