--- a/Tribute page.html
+++ b/Tribute page.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <style>
- body {
-    background-color:rgba(245, 245, 245, 0.966)
+ 
+ 
+body {
+    background-color:rgba(245, 245, 245, 0.884)
 }
 
 #title {
@@ -30,20 +32,17 @@ font-weight: 500;
 text-align: center;  
 }
 
-#main {
-    font-size: 15px;
-    text-align: center; 
-}
-
 li {
 text-align: center;
 table-layout:fixed;
 font-weight: 300; 
 }
+
 .italics {
     text-align: center; 
     font-weight: 350; 
 }
+
 footer {
     font-weight: 550 
 }
@@ -58,24 +57,25 @@ footer {
 }
 
 
+
 </style>
 
 <HTML>
-<head>
-    <Title> Tribute page of Dr.Norman Borlaug</Title>
-</head>
-<header id="title">Dr.Norman Borlaug</header>
-<main id="main">
-<body>
-    <h1> The man who saved a billion lives</h1>
-    <img id="image" id="image-div" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
-    <br>
-    <br>
-    
-    <h2 id="img-caption">Dr. Norman borlaug, third from the left
-        , trains biologists in Mexico on how to increase wheat
-        yields - part of his life-long war on hunger.
-    </h2>
+    <head>
+        <Title> Tribute page of Dr.Norman Borlaug</Title>
+    </head>
+    <main id="main">
+        <header id="title">Dr.Norman Borlaug</header>
+            <h1> The man who saved a billion lives</h1>
+                <figure id="img-div">
+                    <div id="img-caption">Dr. Norman borlaug, third from the left
+                    , trains biologists in Mexico on how to increase wheat
+                    yields - part of his life-long war on hunger.
+                        <img id="image" id="image-div" id="tribute-info" id="tribute-link" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
+                             </div>        
+                                  </figure>
+     </main>
+
    <br>
    <br>
    <br>
@@ -106,8 +106,7 @@ footer {
             <li><strong>2005</strong> - States "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modyifying plants and animals for a long time. Long before we caled it science, people were selecting the best breeds."</li>
             <li><strong>2009</strong> - Dies at the age of 95</li> 
         </ul>
-    </main>
-</body>
+
 <br>
 <br>
 <br>
