Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
+
 <style>
- 
- 
-body {
+ body {
     background-color:rgba(245, 245, 245, 0.884)
 }
 
@@ -19,6 +18,7 @@ h1 {
     text-align:center;
     font-weight: 300; 
 }
+
 h2 { 
     font-size: 15px;
 text-align: center;
@@ -52,12 +52,10 @@ footer {
     max-width: 100%; 
     display: block;
 }
+
 #image-caption{
     height:auto; 
 }
-
-
-
 </style>
 
 <HTML>
@@ -71,9 +69,9 @@ footer {
                     <div id="img-caption">Dr. Norman borlaug, third from the left
                     , trains biologists in Mexico on how to increase wheat
                     yields - part of his life-long war on hunger.
-                        <img id="image" id="image-div" id="tribute-info" id="tribute-link" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
-                             </div>        
-                                  </figure>
+                        <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
+                             </div id="tribute-info">        
+                                  </figure id="tribute-link">
      </main>
 
    <br>
