Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -1,3 +1,5 @@
+<!--Completion date: 4th August 2022 1926hrs-->
+
 <!DOCTYPE html>
 
 <style>
@@ -72,7 +74,7 @@ footer {
                         <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
                              </div id="tribute-info">        
                                   </figure id="tribute-link">
-     </main>
+     
 
    <br>
    <br>
@@ -119,8 +121,9 @@ man's towering intellect, persistence and scientific vision can make to humman p
 </body>
 <br>
 <br>
-<footer> If you have time, you should read more about this incredible 
+    <footer> If you have time, you should read more about this incredible 
     human being on his <a id="tribute-link" target="_blank" href= "https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>
 </footer>
+</main>
 </HTML>
 
