Survery form.html

--- a/Survery form.html
+++ b/Survery form.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<style>
+#background {
+    background-image: url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
+    height: 100%;
+    background-position: center;
+    background-size: 100%; 
+}
+</style>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Arthur Thai">
-    <title>Document</title>
+    <title>Survey form</title>
 </head>
-<body>
+
+<body id="background">
     
 </body>
 </html>
