Survery form.html

--- a/Survery form.html
+++ b/Survery form.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <style>
-#background {
+#background{
     background-image: url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat; 
     height: 100%;
-    background-position: center;
-    background-size: 100%; 
 }
+
 </style>
 
 <head>
