--- a/Survery form.html
+++ b/Survery form.html
@@ -1,12 +1,21 @@
+<!--Completion date: -->
 <!DOCTYPE html>
 <html lang="en">
 
 <style>
-#background{
+.background{
     background-image: url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
     background-size: cover;
     background-repeat: no-repeat; 
     height: 100%;
+}
+.layer{
+    background-color: rgba(197, 49, 235, 0.699);
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%; 
 }
 
 </style>
@@ -18,7 +27,8 @@
     <title>Survey form</title>
 </head>
 
-<body id="background">
-    
+<body class="background">
+        <div class="layer">    
+        </div>
 </body>
 </html>
