--- a/Tribute page.html
+++ b/Tribute page.html
@@ -1,6 +1,11 @@
 <!--Completion date: 4th August 2022 1926hrs-->
-
 <!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Arthur Thai">
+    <title>Tribute page</title>
+</head>
 
 <style>
  body {
