--- a/Tribute page.html
+++ b/Tribute page.html
@@ -58,6 +58,9 @@ footer {
     height: auto;
     max-width: 100%; 
     display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 #image-caption{
