Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -66,6 +66,14 @@ footer {
 #image-caption{
     height:auto; 
 }
+
+#tribute-info{
+    width: 100%;
+    bottom: 0;
+    right: 0;
+    display: table;
+    height: 200px;
+}
 </style>
 
 <HTML>
@@ -75,15 +83,11 @@ footer {
     <main id="main">
         <header id="title">Dr.Norman Borlaug</header>
             <h1> The man who saved a billion lives</h1>
-                <figure id="img-div">
-                    <div id="img-caption">Dr. Norman borlaug, third from the left
-                    , trains biologists in Mexico on how to increase wheat
-                    yields - part of his life-long war on hunger.
-                        <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
-                             </div id="tribute-info">        
-                                  </figure id="tribute-link">
-     
-
+                 <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
+                        <div id="img-caption">Dr. Norman borlaug, third from the left
+                            , trains biologists in Mexico on how to increase wheat
+                            yields - part of his life-long war on hunger.        
+                                  </figure>
    <br>
    <br>
    <br>
