--- a/Tribute page.html
+++ b/Tribute page.html
@@ -56,7 +56,7 @@ footer {
 
 #image {
     height: auto;
-    max-width: 100%; 
+    max-width: 80%; 
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -64,15 +64,27 @@ footer {
 }
 
 #image-caption{
-    height:auto; 
+    height:auto;
+    margin-top: 10px;
 }
 
-#tribute-info{
+/* #tribute-info{
     width: 100%;
     bottom: 0;
     right: 0;
     display: table;
     height: 200px;
+} */
+
+#tribute-info{
+    max-width: 550px;
+    margin: auto;  
+    text-align: left;
+    line-height: 1.8;
+}
+li{
+    margin: 16px 0;
+    text-align: left;
 }
 </style>
 
@@ -87,7 +99,6 @@ footer {
                         <div id="img-caption">Dr. Norman borlaug, third from the left
                             , trains biologists in Mexico on how to increase wheat
                             yields - part of his life-long war on hunger.        
-                                  </figure>
    <br>
    <br>
    <br>
@@ -113,12 +124,11 @@ footer {
             <li> <strong>1953</strong> - Crosses a short, sturdy dwarf breed of wheat with a high-yielding American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.</li> 
             <li> <strong>1962</strong> - Visits Delhi and brigns his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population</li>
             <li><strong>1970</strong> - Receives the Nobel Peace Prize</li>
-            <li><strong>1983</strong> - Helps seven African countries dramatically increase their maize and sorghum yields <li>
+            <li><strong>1983</strong> - Helps seven African countries dramatically increase their maize and sorghum yields </li>
             <li><strong>1984</strong> - Becomes a distinguished professor at Texas A&M University</li>
             <li><strong>2005</strong> - States "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modyifying plants and animals for a long time. Long before we caled it science, people were selecting the best breeds."</li>
             <li><strong>2009</strong> - Dies at the age of 95</li> 
         </ul>
-
 <br>
 <br>
 <br>
