--- a/Tribute page.html
+++ b/Tribute page.html
@@ -13,7 +13,7 @@
 }
 
 #title {
-    font-size: 40px;
+    font-size: 50px;
     text-align:center; 
     font-weight: 500; 
     position: static;
@@ -21,28 +21,28 @@
 }
 
 h1 {
-    font-size: 15px; 
+    font-size: 20px; 
     text-align:center;
     font-weight: 300; 
 }
 
 h2 { 
     font-size: 15px;
-text-align: center;
-font-weight: 300; 
+    text-align: center;
+    font-weight: 300; 
 
 }
 
 #subtitle {
-font-size: 18px;
-font-weight: 500; 
-text-align: center;  
+    font-size: 20px;
+    font-weight: 500; 
+    text-align: center;  
 }
 
 li {
-text-align: center;
-table-layout:fixed;
-font-weight: 300; 
+    text-align: center;
+    table-layout:fixed;
+    font-weight: 300; 
 }
 
 .italics {
@@ -66,6 +66,7 @@ footer {
 #image-caption{
     height:auto;
     margin-top: 10px;
+    font-size: 20px;
 }
 
 /* #tribute-info{
@@ -92,11 +93,11 @@ li{
     <head>
         <Title> Tribute page of Dr.Norman Borlaug</Title>
     </head>
-    <main id="main">
+    <main>
         <header id="title">Dr.Norman Borlaug</header>
             <h1> The man who saved a billion lives</h1>
                  <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug in wheat field"> 
-                        <div id="img-caption">Dr. Norman borlaug, third from the left
+                        <div id="image-caption">Dr. Norman borlaug, third from the left
                             , trains biologists in Mexico on how to increase wheat
                             yields - part of his life-long war on hunger.        
    <br>
@@ -107,10 +108,6 @@ li{
     <div id="subtitle">
         Here's a timeline of Dr. Borlaug's life
     </div> 
-        <br>
-        <br>
-        <br>
-        <br>
         <ul id="tribute-info">
             <li><strong>1914</strong> - Born in Creso, Iowa</li>
             <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li> 
