--- a/Survey form.html
+++ b/Survey form.html
@@ -5,7 +5,7 @@
 <style>
 .background{
     /* background-image: url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"); */
-    background: linear-gradient(rgba(241, 241, 241, 0), rgba(240, 236, 236, 0.9)), url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
+    background: linear-gradient(rgba(241, 241, 241, 0), rgba(240, 236, 236, 0)), url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
     background-size: cover;
     background-repeat: no-repeat; 
     height: 100%;
@@ -24,13 +24,14 @@
     color: white; 
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 100px;
-    font-size: 25px;
+    font-size: 50px;
     line-height: 50px; 
 }
 
 #caption{
     text-align: center;
     color: white; 
+    font-size: 30px;
 }
 
 </style>
@@ -45,7 +46,7 @@
 <body class="background">
         <div class="layer">    
             <h1 id="title">FreeCodeCamp Survery Form</h1>
-        <div id="caption">Thank you for taking the time to help us improve the platform</div>
+        <div id="caption"><em>Thank you for taking the time to help us improve the platform</em></div>
         </div>
 </body>
 </html>
