Survey form.html

--- a/Survey form.html
+++ b/Survey form.html
@@ -2,6 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="author" content="Arthur Thai">
+        
+        <title>Survey form</title>
+
 <style>
 .background{
     /* background-image: url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"); */
@@ -35,18 +42,15 @@
 }
 
 </style>
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="Arthur Thai">
-    <title>Survey form</title>
-</head>
+    </head>
 
 <body class="background">
         <div class="layer">    
             <h1 id="title">FreeCodeCamp Survery Form</h1>
         <div id="caption"><em>Thank you for taking the time to help us improve the platform</em></div>
         </div>
+    <form id="form">
+
+    </form>
 </body>
 </html>
