Tribute page.html

--- a/Tribute page.html
+++ b/Tribute page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Arthur Thai">
+    
     <title>Tribute page</title>
-</head>
 
 <style>
  body {
@@ -88,8 +88,8 @@ li{
     text-align: left;
 }
 </style>
-
-<HTML>
+    </head>
+<body>
     <head>
         <Title> Tribute page of Dr.Norman Borlaug</Title>
     </head>
