--- a/Survey form.html
+++ b/Survey form.html
@@ -55,22 +55,22 @@
         <div id="caption"><em>Thank you for taking the time to help us improve the platform</em></div>
             <form id="form">
                 <div>
-                 <label for="name" id="label-name">Name</label>
+                 <label for="label-name" id="label-name">Name</label>
                         <input type="text" id="name" placeholder="Enter your name">
                 </div>
                 <div>
-                    <label for="email" id="email">Email</label>
+                    <label for="label-name" id="label-name">Email</label>
                            <input type="text" id="email" placeholder="Enter your Email">
                    </div>
                    <div>
-                    <label for="Age" id="Age">Age (Optional)</label>
+                    <label for="label-name" id="label-name">Age (Optional)</label>
                            <input type="text" id="email" placeholder="Age">
                    </div>
                    <div>
-                    <label for="current-role" id="current-role">Which option best describes
+                    <label for="label-name" id="label-name">Which option best describes
                         your current role?
                     </label>
-                           <input type="text" id="current-role" placeholder="Select current role">
+                           <input type="text" id="label-name" placeholder="Select current role">
                    </div>
             </form>    
         </div>
