Survey form.html

--- a/Survey form.html
+++ b/Survey form.html
@@ -66,11 +66,24 @@
                     <label for="label-name" id="label-name">Age (Optional)</label>
                            <input type="text" id="email" placeholder="Age">
                    </div>
-                   <div>
+                   <!-- <div>
                     <label for="label-name" id="label-name">Which option best describes
                         your current role?
                     </label>
                            <input type="text" id="label-name" placeholder="Select current role">
+                   </div> -->
+                   <div>
+                    <label for="label-name" id="label-name">Which option best describes
+                        your current role?
+                    </label>
+                    <select name="role" id="role">
+                        <option value="Select current role">Select current role</option>
+                        <option value="Student">Student</option>
+                        <option value="Full Time Job">Full Time Job</option>
+                        <option value="Full Time Learner">Full Time Learner</option>
+                        <option value="Prefer not to say">Prefer not to say</option>
+                        <option value="Other">Other</option>
+                    </select>
                    </div>
             </form>    
         </div>
