--- a/Survey form.html
+++ b/Survey form.html
@@ -24,6 +24,12 @@
     width: 100%;
     height: 100%; 
 }
+body {
+    min-height: 100%;
+}
+html {
+    height: 100%;
+}
 #title {
     text-align: center;
     color: white; 
@@ -40,6 +46,7 @@
 #form {
     top:10px; 
     text-align: left;
+    line-height: 1.5;
     }
 #label-name {
     color:white;
@@ -48,10 +55,25 @@
     color: white;
     text-align: left;
     }
+#comments{
+    width: 100%;
+    padding-bottom: 80px;
+}
 .button {
     width: 100%;
     float: right;
     font-size: 20px;
+    padding: 12px 28px;
+    border-radius: 8px;
+    color: white;
+    background-color: rgba(105, 199, 105, 0.973);
+    transition-duration: 0.4s;
+    border: 4px solid black;
+    
+}
+.button:hover {
+    background-color: aquamarine;
+    color: black;
 }
 
 </style>
