--- a/Survey form.html
+++ b/Survey form.html
@@ -25,7 +25,9 @@
     height: 100%; 
 }
 body {
-    min-height: 100%;
+    min-height: 100vh;
+    max-width: 400px;
+    margin: 0 auto; 
 }
 html {
     height: 100%;
