Survey form.html

--- a/Survey form.html
+++ b/Survey form.html
@@ -24,10 +24,15 @@
     width: 100%;
     height: 100%; 
 }
-body {
-    min-height: 100vh;
-    max-width: 400px;
-    margin: 0 auto;
+html {
+    /* min-height: 100vh;
+    min-width: 100vw;
+    margin: 0; */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right:0;
+    position:fixed; 
 }
 html {
     height: 100%;
