--- a/Survey form.html
+++ b/Survey form.html
@@ -10,7 +10,7 @@
         <title>Survey form</title>
 
 <style>
-.background{
+.background, body{
     background: linear-gradient(rgba(241, 241, 241, 0), rgba(240, 236, 236, 0)), 
     url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
     background-size: cover;
@@ -66,7 +66,7 @@ form {
     line-height: 1.4;
     width: 500rem;
     margin:auto; 
-    background: rgba(31, 8, 94, 0.664);
+    background: rgba(8, 1, 29, 0.664);
     padding: 3rem 2.5rem;
     border-radius: 2rem;
     width: 500px;
