--- a/Survey form.html
+++ b/Survey form.html
@@ -10,7 +10,7 @@
         <title>Survey form</title>
 
 <style>
-.background, body{
+.background {
     background: linear-gradient(rgba(241, 241, 241, 0), rgba(240, 236, 236, 0)), 
     url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
     background-size: cover;
@@ -18,13 +18,15 @@
     background-position: center;
     height: 100%;
     }
-.layer{
+.background-layer {
     background-color: rgba(53, 36, 209, 0.329);
     position:relative;
+    background-size: contain;
+    background-repeat: no-repeat;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; 
+    height: fit-content; 
 }
 html {
     min-height: 100vh;
@@ -111,7 +113,7 @@ form {
 </style>
     </head>
 <body class="background">
-        <div class="layer">    
+        <div class="background-layer">    
             <h1 id="title">FreeCodeCamp Survery Form</h1>
         <div id="caption"><em>Thank you for taking the time to help us improve the platform</em></div>
         <br>  
