Survey form.html

--- a/Survey form.html
+++ b/Survey form.html
@@ -1,4 +1,4 @@
-<!--Completion date: -->
+<!--Completion date: 22nd August 17:57hrs-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,18 +26,31 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: fit-content; 
+    block-size: fit-content;
 }
 html {
     min-height: 100vh;
-    min-width: 100vw;
     margin: 0;
     top: 0;
     bottom: 0;
     left: 0;
-    right:0;
+    right: 0;
     position:relative; 
-    background-size: cover;
+    background-size:auto;
+    background-color: rgb(204, 166, 219);
+    padding: 40px;
+    border: 3px solid black
+
+}
+h1{
+    /* background-color: aqua;
+    padding: 20px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: black; */
+    background-color: rgb(119, 70, 165);
+    padding: 20px;
+    border: 8px solid black
 }
 body {
     top: 0;
