--- a/Product landing page.html
+++ b/Product landing page.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Arthur Thai">
    
-    <title>Document</title>
+    <title>Product landing page</title>
 </head>
+<style>
+    
+</style>
 <body>
     
 </body>
