Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -5,13 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Arthur Thai">
-   
-    <title>Product landing page</title>
+<title>Product landing page</title>
 </head>
 <style>
-    
+body {
+    background-color:gainsboro;
+}
+.heading {
+    text-align: center;
+    margin-top: 100px;
+    line-height: 2.5;
+    font-size: 20px;
+    font-weight: 500;
+}
+
 </style>
 <body>
-    
+    <div class="heading">
+        <header>Handcrafted, home-made masterpieces</header>
+            <input type="text" placeholder="Enter your email address">
+                <input name="form" type="submit" value="Get started"> 
+    </div>
 </body>
 </html>
