Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -13,12 +13,19 @@ body {
 }
 .heading {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 120px;
     line-height: 2.5;
     font-size: 20px;
     font-weight: 500;
 }
-
+[type="submit"] {
+    background-color: rgb(233, 194, 22);
+    font-weight: 700;
+    display: block;
+    margin-left: 275px;
+    min-width: 20%; 
+    line-height: 1.3rem;
+}
 </style>
 <body>
     <div class="heading">
