Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -18,6 +18,11 @@ body {
     font-size: 20px;
     font-weight: 500;
 }
+[type="text"] {
+    min-width: 50%;
+    text-align: left;
+    padding: 0.3rem;
+}
 [type="submit"] {
     background-color: rgb(233, 194, 22);
     font-weight: 700;
@@ -25,13 +30,14 @@ body {
     margin-left: 275px;
     min-width: 20%; 
     line-height: 1.3rem;
+    border: none;
 }
 </style>
 <body>
     <div class="heading">
         <header>Handcrafted, home-made masterpieces</header>
             <input type="text" placeholder="Enter your email address">
-                <input name="form" type="submit" value="Get started"> 
+                <input name="form" type="submit" value="GET STARTED"> 
     </div>
 </body>
 </html>
