--- a/Product landing page.html
+++ b/Product landing page.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!--Date started: August 23rd-->
+<!--Date completed:-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +12,14 @@
 <style>
 body {
     background-color:gainsboro;
+}
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: teal;
+    color: #fff; 
 }
 .heading {
     text-align: center;
@@ -33,6 +43,14 @@ body {
     border: none;
 }
 </style>
+<head>
+    <nav class="navbar">
+        <div class="logo">Original trombones</div>
+        <div class="features">Features</div>
+        <div class="how it works">How it works</div>
+        <div class="pricing">Pricing</div>
+    </nav>
+</head>
 <body>
     <div class="heading">
         <header>Handcrafted, home-made masterpieces</header>
