--- a/Product landing page.html
+++ b/Product landing page.html
@@ -21,6 +21,9 @@ body {
     background-color: teal;
     color: #fff; 
 }
+.logo {
+    font-size: 28px;
+}
 .heading {
     text-align: center;
     margin-top: 120px;
@@ -36,11 +39,28 @@ body {
 [type="submit"] {
     background-color: rgb(233, 194, 22);
     font-weight: 700;
-    display: block;
-    margin-left: 275px;
+    display: flex;
     min-width: 20%; 
+    margin-left: 300px;
     line-height: 1.3rem;
     border: none;
+    justify-content: center;
+}
+.description {
+    text-align: left;
+    line-height: 1.2;
+    margin-left: 200px;
+    margin-top: 70px; 
+}
+h1,h2,h3 {
+    font-size: 20px;
+    font-weight: 500;
+}
+iframe {
+    margin-left: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 </style>
 <head>
@@ -55,7 +75,25 @@ body {
     <div class="heading">
         <header>Handcrafted, home-made masterpieces</header>
             <input type="text" placeholder="Enter your email address">
-                <input name="form" type="submit" value="GET STARTED"> 
-    </div>
+                    <input name="form" type="submit" value="GET STARTED"> 
+                </div>
+    <section class="description">
+        <h1>Premium Materials</h1>
+            <p1>Our trombones use th shiniest brass which is sourced
+            locally. This will increase the longevity of your purchase</p1>
+        <h2>Fast Shipping</h2>
+            <p2>We make sure you receive your trombone as soon as we have
+            finished making it. We also provide free returns if you are 
+            not satisfied.</p2>
+        <h3>Quality Assurance</h3>
+            <p3>for every purchase you make, we will ensure there are no damages
+            or faults and we will check and test the pitch of your instrument</p3>
+    </section>
+<div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" 
+    title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen></iframe>
+</div>
 </body>
 </html>
