Survey form.html

--- a/Survey form.html
+++ b/Survey form.html
@@ -136,11 +136,11 @@ form {
             <div id="label-name">
                 <div>
                  <label for="label-name" id="label-name">Name</label>
-                        <input type="text" id="name" placeholder="Enter your name">
+                        <input type="text" id="name" placeholder="Enter your name" required>
                 </div>
                 <div>
                     <label for="label-name" id="label-name">Email</label>
-                           <input type="text" id="email" placeholder="Enter your Email">
+                           <input type="text" id="email" placeholder="Enter your Email" required>
                 </div>
                 <div>
                     <label for="label-name" id="label-name">Age (Optional)</label>
