Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -80,13 +80,16 @@ iframe {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 60px;
 }
-[type="submit"] {
+[name="price"] {
     background-color: rgb(233, 194, 22);
     font-weight: 700;
     border: none;
     text-align: center;
     margin-top: 15px;
+    padding: 10px;
+    min-width: 50%;
 }
 </style>
 <head>
@@ -129,7 +132,7 @@ iframe {
         <br>Lorem ipsum<br>
         <br>Lorem ipsum dolor<br>
         <br>Lorem ipsum<br>
-        <input type="submit" value="SELECT"> 
+        <input name="price" type="submit" value="SELECT"> 
     </div>
     <div class="column">BASS TROMBONE
         <h1>$900</h1>
@@ -137,7 +140,7 @@ iframe {
         <br>Lorem ipsum<br>
         <br>Lorem ipsum dolor<br>
         <br>Lorem ipsum<br>
-        <input type="submit" value="SELECT">
+        <input name="price" type="submit" value="SELECT">
     </div>
     <div class="column">VALVE TROMBONE
         <h1>$1200</h1>
@@ -145,7 +148,7 @@ iframe {
         <br>Great for Jazz Bands<br>
         <br>Lorem ipsum dolor<br>
         <br>Lorem ipsum<br>
-        <input type="submit" value="SELECT">
+        <input name="price" type="submit" value="SELECT">
     </div>
 </div>
 </body>
