Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -99,10 +99,16 @@ iframe {
     margin-top: 1em;
     font-size: 25px;
 }
-
+#instrument {
+    background-color: rgb(199, 191, 191);
+    padding: 1.5rem;
+}
 footer {
     text-align: right;
-
+    margin-left: 100px;
+    margin-top: 40px;
+    background-color: rgb(199, 191, 191);
+    width: 70%;
     }
 </style>
 <head>
@@ -140,7 +146,7 @@ footer {
 </div>
 <div class="row">
     <div class="column">
-        <div>TENOR TROMBONE</div>
+        <div id="instrument">TENOR TROMBONE</div>
         <h1 id="price">$600</h1>
         <br>Lorem ipsum<br>
         <br>Lorem ipsum<br>
@@ -149,7 +155,7 @@ footer {
         <input name="price" type="submit" value="SELECT"> 
     </div>
     <div class="column">
-        <div>BASS TROMBONE</div>
+        <div id="instrument">BASS TROMBONE</div>
         <h1 id="price">$900</h1>
         <br>Lorem ipsum<br>
         <br>Lorem ipsum<br>
@@ -158,7 +164,7 @@ footer {
         <input name="price" type="submit" value="SELECT">
     </div>
     <div class="column">
-        <div>VALVE TROMBONE</div>
+        <div id="instrument">VALVE TROMBONE</div>
             <h1 id="price">$1200</h1>
                 <br>Plays similar to a Trumpet<br>
                 <br>Great for Jazz Bands<br>
