Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -45,8 +45,8 @@ body {
     min-width: 20%; 
     line-height: 1.3rem;
     border: none;
-    display: block
-
+    display: block;
+    margin-left: 540px;
 }
 .description {
     text-align: left;
