Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -110,6 +110,11 @@ footer {
     background-color: rgb(199, 191, 191);
     width: 70%;
     }
+.copyright {
+    justify-content: space-between;
+    display: flex;
+    margin-left: 250px;
+}
 </style>
 <head>
     <nav class="navbar">
@@ -178,8 +183,8 @@ footer {
         <div class="Privacy">Privacy</div>
         <div class="Terms">Terms</div>
         <div class="Contact">Contact</div>
-        <em>.Copyright 2016, Origical Trombones</em>
     </div>
+    <em>.Copyright 2016, Origical Trombones</em>
 </footer>
 </body>
 </html>
